test/classes/errors/nilability-assign/assign-oknil-owned-from-oknil-owned.chpl
//  lhs: owned?  rhs: owned?  ok

class MyClass {  var x: int;  }

var lhs: owned MyClass? = nil;
var rhs: owned MyClass?;

lhs = rhs;


